--- a/src/config/cognitoConfig.json
+++ b/src/config/cognitoConfig.json
@@ -1,6 +1,6 @@
 {
     "clientId": "71cs1vs1bkc1b6ai9q0olocjas",
-    "userPoolUri": "https://reactnodeguide.auth.us-east-1.amazoncognito.com",
+    "userPoolUri": "reactnodeguide.auth.us-east-1.amazoncognito.com",
     "userPool": "us-east-1_M3Gx3MjTH",
     "region": "us-east-1",
     "callbackUri": "http://localhost:3000/",
